--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,32 +1,40 @@
 <div id="footer">
-<!-- top -->
-<div id="footer_top">
-<ul>
-<li class="first">KW massage</li>
-<li>Jeremy Bissonnette RMT</li>
-<li>229 Frederick Street</li>
-<li>Kitchener</li>
-<li>On </li>
-<li>N2H 2L1</li>
-<li>Canada <strong>Tel: 519-745-4112</strong></li>
-<li>Email: <a href="mailto:jeremy@kwmassage.com" class="blue">jeremy@kwmassage.com</a></li>
-</ul>
+	<!-- top -->
+	<div id="footer_top">
+		<ul>
+			<li class="first">KW massage</li>
+			<li>Jeremy Bissonnette RMT</li>
+			<li>229 Frederick Street</li>
+			<li>Kitchener</li>
+			<li>On </li>
+			<li>N2H 2L1</li>
+			<li>Canada <strong>Tel: 519-745-4112</strong></li>
+			<li>Email: <a href="mailto:jeremy@kwmassage.com" class="blue">jeremy@kwmassage.com</a></li>
+		</ul>
+	</div>
+	<!-- top -->
+	
+	<!-- middle -->
+	<div id="footer_middle">
+		<div class="menu-footer-menu-container">
+			<ul id="menu-footer-menu" class="menu1">
+				<li id="menu-item-105" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-105 first"><a href="{{site.baseurl}}">Home</a></li>
+				<li id="menu-item-106" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-106"><a href="{{site.baseurl}}about">About</a></li>
+				<li id="menu-item-107" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-107"><a title="Massage Therapy Appointments" href="{{site.baseurl}}clinic-information">Appointments</a></li>
+				<li id="menu-item-109" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-109"><a href="{{site.baseurl}}knowledge-centre">Knowledge Centre</a></li>
+				<li id="menu-item-108" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-108"><a href="{{site.baseurl}}contact">Contact</a></li>
+				<li id="menu-item-226" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-226"><a href="{{site.baseurl}}clinic-information/note-to-new-massage-therapy-clients">Note to New Massage Clients</a></li>
+			</ul>
+		</div>
+	</div>
+	<!-- middle -->
+	
+	<!-- bottom -->
+	<div id="footer_bottom">
+		<ul>
+			<li class="first"><strong>2011</strong>  /  All rights &amp; Copyrights reserved by <strong>KW massage</strong></li>
+			<li>Site credits <a href="http://www.pixellab.ca/" target="_blank">PixelLab</a></li>
+		</ul>
+	</div>
 </div>
-<!-- top -->
-<!-- middle -->
-<div id="footer_middle">
-<?php wp_nav_menu( array('menu' => 'Footer Menu','menu_class'=> 'menu1' )); ?>
-</div>
-<!-- middle -->
-<!-- bottom -->
-<div id="footer_bottom">
-<ul>
-<li class="first"><strong>2011</strong>  /  All rights &amp; Copyrights reserved by <strong>KW massage</strong></li>
-<li>Site credits <a href="http://www.pixellab.ca" target="_blank">PixelLab</a></li>
-</ul>
-</div>
-<!-- bottom -->
-</div>
-<!-- end footer -->
 
-</body>
