--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,30 +1,27 @@
 <div id="header">
-<!-- header top -->
-<div class="header_wrap">
-<!-- logo -->
-<div id="logo"><a href="{{ site.url }}" title="Welcome To KW: Kitchener / Waterloo Massage Therapy"><img src="/assets/images/logo.png" alt="KW: Kitchener / Waterloo Massage Therapy" /></a></div>
-<!-- logo -->
-<!-- tagline -->
-<div id="tagline"><span>Kitchener / Waterloo Massage Therapy</span></div>
-<!-- tagline -->
-<!-- contact bar -->
-<div id="contactbar">
-<span>Telephone: <strong>519-745-4112</strong></span>
-<span>Email:<strong><a href="#">jeremy@kwmassage.com</a></strong></span>
-
+  <div class="header_wrap">
+    <!-- logo -->
+    <div id="logo">
+      <a href="{{site.baseurl}}" title="Welcome To KW: Kitchener / Waterloo Massage Therapy">
+        <img src="{{site.baseurl}}/assets/images/logo.png" alt="KW: Kitchener / Waterloo Massage Therapy">
+      </a>
+    </div>
+    <!-- logo -->
+    
+    <!-- tagline -->
+    <div id="tagline"><span>Kitchener / Waterloo Massage Therapy</span></div>
+    <!-- tagline -->
+    
+    <!-- contact bar -->
+    <div id="contactbar">
+      <span>Telephone: <strong>519-745-4112</strong></span>
+      <span>Email:<strong><a href="mailto:jeremy@kwmassage.com">jeremy@kwmassage.com</a></strong></span>
+    </div>
+    <!-- contact bar -->
+     
+    <div class="clear">&nbsp;</div>
+    
+    {% include navigation.html %}
+    
+  </div>
 </div>
-<!-- contact bar -->
-
-<div class="clear">&nbsp;</div>
-</div>
-<!-- header top -->
-<!-- navigation -->
-<div id="navigation">
-<div class="header_wrap">
-<?php //wp_nav_menu( array('menu' => 'Main Menu' )); ?>
-<?php wp_nav_menu( array('menu' => 'Main Menu','menu_class'=> 'main-navigation')); ?>
-</div>
-</div>
-<!-- navigation -->
-</div>
-<!-- end header -->
