--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
-
   {% include head.html %}
-
   <body>
-
     {% include header.html %}
-    {% include Right_sidebar.html %}
-    {% include leftcol.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
+    <div id="container">
+      <div id="container_top">
+        <div class="header_wrap">
+          {% include leftcol.html %}
+          {% include rightcol.html %}
+          {% include footer.html %}
+        </div>
       </div>
     </div>
-
-    {% include footer.html %}
-
   </body>
-
 </html>
+
+
+
+
