--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-@charset "utf-8";
+---
+---
 /* CSS Document for Kitchener / Waterloo Massage Therapy */
 /* Developed by: imicreation */
 /* Global Stylesheet */
