--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,16 @@
----
-layout: default
----
-<div class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-
-</div>
+<!DOCTYPE html>
+<html>
+  {% include head.html %}
+  <body>
+    {% include header.html %}
+    <div id="container">
+      <div id="container_top">
+        <div class="header_wrap">
+          {% include leftcol.html %}
+          {% include rightcol.html %}
+          {% include footer.html %}
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
