--- a/_includes/rightcol.html
+++ b/_includes/rightcol.html
@@ -3,32 +3,32 @@
 
   <div id="formbox">
     <h1>Contact Form</h1>
-    <form action="{{site.baseurl}}/#wpcf7-f431-p75-o1" method="post" class="wpcf7-form" novalidate="novalidate">
+    <form action="{{site.baseurl}}/#wpcf7-f431-p75-o1" method="post" novalidate="novalidate">
       <p>Your Name (required)<br>
-        <span class="wpcf7-form-control-wrap your-name">
-          <input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false">
-        </span> 
+        <span class="textfield" >
+          <input type="text" name="your-name" value="" size="40" class="input" aria-required="true" aria-invalid="false">
+        </span>
       </p>
       <p>Your Email (required)<br>
-        <span class="wpcf7-form-control-wrap your-email">
-          <input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false">
+        <span class="textfield">
+          <input type="email" name="your-email" value="" size="40" class="input" aria-required="true" aria-invalid="false">
         </span>
       </p>
       <p>Subject<br>
-        <span class="wpcf7-form-control-wrap your-subject">
-          <input type="text" name="your-subject" value="" size="40" class="wpcf7-form-control wpcf7-text" aria-invalid="false">
+        <span class="textfield">
+          <input type="text" name="your-subject" value="" size="40" class="input" aria-invalid="false">
         </span>
       </p>
       <p>Your Message<br>
-        <span class="wpcf7-form-control-wrap your-message">
-          <textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false"></textarea>
+        <span class="textarea">
+          <textarea name="your-message" cols="40" rows="10" class="input" aria-invalid="false"></textarea>
         </span>
       </p>
       <p>
-        <input type="submit" value="Send" class="wpcf7-form-control wpcf7-submit">
+        <input type="submit" value="Send" class="send">
         <img class="ajax-loader" src="./KWmassage _ welcome_page_files/ajax-loader.gif" alt="Sending ..." style="visibility: hidden;">
       </p>
-      <div class="wpcf7-response-output wpcf7-display-none"></div>
+      <div class="clearbutton"></div>
     </form>
   </div>
 
