--- a/css/style.css
+++ b/css/style.css
@@ -116,11 +116,12 @@ body.change_bg_summer { background:url(/assets/images/bg_body_summer.jpg) no-rep
 .testimonialbox .quotebottom p span a:hover { text-decoration:none; }
 
 #formbox { background:url(/assets/images/bg_formbox.png) no-repeat; width:540px; height:auto; float:left; margin:0; padding:30px 0 10px 0; }
-#formbox h1 { font-size:25px; color:#3377b8; margin:0; padding:0 0 12px 5px; display:block; }
+#formbox h1 { font-size:25px; color:#3377b8; margin:0; padding:0 0 12px 5px; }
 #formbox .textfield { width:253px; height:auto; float:left; margin: 0 5px 10px 5px; padding:0; }
+#formbox p { border: 1px solid black; }
 #formbox .textfield span, #formbox .textarea span { font-size:13px; font-style:italic; color:#77786f; margin:0; padding:0 0 5px 0; }
-#formbox .textfield .input { background:url(/assets/images/bg_tfw.gif) no-repeat; width:243px; height:27px; float:left; border:none; line-height:27px; margin:0; padding:4px 5px; }
-#formbox .textfield .input:hover { background:url(/assets/images/bg_tfw2.gif) no-repeat; }
+#formbox .textfield input { background:url(/assets/images/bg_tfw.gif) no-repeat; width:243px; height:27px; float:left; border:none; line-height:27px; margin:0; padding:4px 5px; }
+#formbox .textfield input:hover { background:url(/assets/images/bg_tfw2.gif) no-repeat; }
 #formbox .textfield .list { width:253px; height:35px; float:left; margin:0; padding:0; }
 #formbox .textfield .list select { padding:0 0 0 16px; }
 #formbox .textarea { width:526px; height:auto; float:left; margin:0 0 20px 0; padding:0 0 0 5px; }
