contact form and nav menu fixed

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,10 +18,9 @@
       <span>Email:<strong><a href="mailto:jeremy@kwmassage.com">jeremy@kwmassage.com</a></strong></span>
     </div>
     <!-- contact bar -->
+
+    <!-- <div class="clear">&nbsp;</div> -->
      
-    <div class="clear">&nbsp;</div>
-    
-    {% include navigation.html %}
-    
   </div>
+  {% include navigation.html %}
 </div>
