--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,35 +1,36 @@
  <!-- navigation -->
-<div id="navigation">
-<div class="header_wrap">
-  <div class="main-navigation">
-    <ul>
-      <li class="current_page_item"><a href="{{site.url}}">Home</a></li>
-      
-      <li class="page_item page-item-19 page_item_has_children"><a href="{{site.url}}/about">About</a>
-        <ul class="children">
-          <li class="page_item page-item-277"><a href="{{site.url}}/about/testimonials">Testimonials</a></li>
-          <li class="page_item page-item-316"><a href="{{site.url}}/about/rock-climbing-as-a-lifestyle">Rock Climbing as a Lifestyle</a></li>
-          <li class="page_item page-item-75"><a href="{{site.url}}/about/welcome">Welcome</a></li>
-        </ul>
-      </li>
-      
-      <li class="page_item page-item-7 page_item_has_children"><a href="{{site.url}}/clinic-information">Appointments</a>
-        <ul class="children">
-          <li class="page_item page-item-224"><a href="{{site.url}}/clinic-information/note-to-new-massage-therapy-clients">Note to New Massage Clients</a></li>
-        </ul>
-      </li>
-      
-      <li class="page_item page-item-21"><a href="{{site.url}}/contact">Contact</a></li>
-      
-      <li class="page_item page-item-20 page_item_has_children"><a href="{{site.url}}/knowledge-centre">Knowledge Centre</a>
-        <ul class="children">
-          <li class="page_item page-item-259"><a href="{{site.url}}/knowledge-centre/facts-about-registered-massage-therapy-in-ontario">Facts</a></li>
-          <li class="page_item page-item-371"><a href="{{site.url}}/knowledge-centre/general-massage-therapy">General Massage Therapy</a></li>
-          <li class="page_item page-item-378"><a href="{{site.url}}/knowledge-centre/stretching">Stretching</a></li>
-          <li class="page_item page-item-376"><a href="{{site.url}}/knowledge-centre/rock-climbing">Rock Climbing</a></li>
-        </ul>
-      </li>
-    </ul>
+ <div id="navigation">
+  <div class="header_wrap">
+    <div class="main-navigation">
+      <ul>
+        <li class="current_page_item"><a href="{{site.url}}">Home</a></li>
+
+        <li><a href="{{site.url}}/about">About</a>
+          <ul>
+            <li><a href="{{site.url}}/about/testimonials">Testimonials</a></li>
+            <li><a href="{{site.url}}/about/rock-climbing-as-a-lifestyle">Rock Climbing as a Lifestyle</a></li>
+            <li><a href="{{site.url}}/about/welcome">Welcome</a></li>
+          </ul>
+        </li>
+
+        <li><a href="{{site.url}}/clinic-information">Appointments</a>
+          <ul>
+            <li><a href="{{site.url}}/clinic-information/note-to-new-massage-therapy-clients">Note to New Massage Clients</a></li>
+          </ul>
+        </li>
+
+        <li><a href="{{site.url}}/contact">Contact</a></li>
+
+        <li class="last" ><a href="{{site.url}}/knowledge-centre">Knowledge Centre</a>
+          <ul>
+            <li><a href="{{site.url}}/knowledge-centre/facts-about-registered-massage-therapy-in-ontario">Facts</a></li>
+            <li><a href="{{site.url}}/knowledge-centre/general-massage-therapy">General Massage Therapy</a></li>
+            <li><a href="{{site.url}}/knowledge-centre/stretching">Stretching</a></li>
+            <li><a href="{{site.url}}/knowledge-centre/rock-climbing">Rock Climbing</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
 <!-- navigation -->
