--- a/_includes/rightcol.html
+++ b/_includes/rightcol.html
@@ -2,19 +2,19 @@
   {{content}}
 
   <div id="formbox">
-    <h1>Contact Form</h1>
     <form action="{{site.baseurl}}/#wpcf7-f431-p75-o1" method="post" novalidate="novalidate">
+      <h1>Contact Form</h1>
       <div class="textfield" >
         <span>Your Name (required)</span>
         <input type="text" name="your-name" value="" size="40" class="input" aria-required="true" aria-invalid="false">
-      </div><br>
-      <div  class="textfield">
-        <span>Subject</span>
-        <input type="text" name="your-subject" value="" size="40" class="input" aria-invalid="false">
       </div>
       <div  class="textfield">
         <span>Your Email (required)</span>
         <input type="email" name="your-email" value="" size="40" class="input" aria-required="true" aria-invalid="false">
+      </div>
+      <div  class="textfield">
+        <span>Subject</span>
+        <input type="text" name="your-subject" value="" size="40" class="input" aria-invalid="false">
       </div>
       <div  class="textarea">
         <span>Your Message</span>
