--- a/_includes/leftcol.html
+++ b/_includes/leftcol.html
@@ -1,7 +1,7 @@
 <div id="leftcol">
 
   <!-- videobox -->
-  <a href="http://youtube/XSRrvEXZSdk" target="_blank" class="widget_sp_image-image-link" title="Jeremy Bissonnette, Registered Massage Therapist"><img width="350" height="322" alt="Jeremy Bissonnette, Registered Massage Therapist" class="attachment-full aligncenter" style="max-width: 100%;" src="{{site.baseurl}}/assets/images/img_video.gif"></a>
+  {%if page.post_id == 75 %}<a href="http://youtube/XSRrvEXZSdk" target="_blank" class="widget_sp_image-image-link" title="Jeremy Bissonnette, Registered Massage Therapist"><img width="350" height="322" alt="Jeremy Bissonnette, Registered Massage Therapist" class="attachment-full aligncenter" style="max-width: 100%;" src="{{site.baseurl}}/assets/images/img_video.gif"></a>{% endif %}
   <!-- videobox -->
 
   <!-- Schedule Now Button -->
@@ -13,7 +13,7 @@
   <div class="textwidget"><br><br></div>
   <h1>Hours</h1>
   <div id="timebox">
-    <span><strong>Monday </strong>10:00 - 5:00</span>
+    <span><strong>Monday</strong>10:00 - 5:00</span>
     <span><strong>Tuesday</strong> 10:00 - 8:00</span>
     <span><strong>Wednesday</strong> 10:00 - 5:00</span>
     <span><strong>Thursday</strong> 10:00 - 3:00</span>
