--- a/_includes/rightcol.html
+++ b/_includes/rightcol.html
@@ -1,4 +1,7 @@
 <div id="rightcol">
+  {% if page.layout == "post" %}
+    <h1>{{ page.title }}</h1>
+  {% endif %}
   {{content}}
 
   <div id="formbox">
