--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ body.change_bg_summer { background:url(/assets/images/bg_body_summer.jpg) no-rep
 /* footer */
 
 #footer { width:100%; height:200px; float:left; margin:0; padding:0; }
-#footer_top { width:100%; height:50px; float:left; margin:0; padding:0; }
+#footer_top { width:100%; min-width: 990px; height:50px; float:left; margin:0; padding:0; }
 #footer_top ul { text-align:center; display:block; margin:0; padding:0; }
 #footer_top ul li { background:url(/assets/images/divider_gray.gif) no-repeat left center; display:inline; color:#b8b9af; line-height:50px; font-size:13px; margin:0; padding:0 6px 0 10px; }
 #footer_top ul li strong { background:url(/assets/images/bullet_circle.gif) no-repeat left center; padding:0 0 0 10px; color:#494a42; }
@@ -141,7 +141,7 @@ body.change_bg_summer { background:url(/assets/images/bg_body_summer.jpg) no-rep
 #footer_top ul li a:hover { color:#494a42; }
 #footer_top ul li a.blue { color:#3377b8; text-decoration:underline; }
 #footer_top ul li a.blue:hover { text-decoration:none; }
-#footer_middle { background:url(/assets/images/bg_footer_bottom.gif) no-repeat center top; width:100%; height:50px; float:left; margin:0; padding:0; }
+#footer_middle { background:url(/assets/images/bg_footer_bottom.gif) no-repeat center top; width:100%; min-width: 650px; height:50px; float:left; margin:0; padding:0; }
 #footer_middle ul { text-align:center; display:block; margin:0; padding:0; }
 #footer_middle ul li { background:url(/assets/images/bullet_circle.gif) no-repeat left center; font-size:13px; line-height:50px; font-weight:bold; display:inline; margin:0; padding:0 7px 0 10px; }
 #footer_middle ul li a, #footer_bottom ul li a { color:#3377b8; text-decoration:underline; }
