--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="header_wrap">
     <!-- logo -->
     <div id="logo">
-      <a href="{{site.baseurl}}" title="Welcome To KW: Kitchener / Waterloo Massage Therapy">
+      <a href="{{site.baseurl}}/" title="Welcome To KW: Kitchener / Waterloo Massage Therapy">
         <img src="{{site.baseurl}}/assets/images/logo.png" alt="KW: Kitchener / Waterloo Massage Therapy">
       </a>
     </div>
