--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,30 +3,30 @@
   <div class="header_wrap">
     <div class="main-navigation">
       <ul>
-        <li class="current_page_item"><a href="{{site.url}}">Home</a></li>
+        <li class="current_page_item"><a href="{{site.baseurl}}/">Home</a></li>
 
-        <li><a href="{{site.url}}/about">About</a>
+        <li><a href="{{site.baseurl}}/about">About</a>
           <ul>
-            <li><a href="{{site.url}}/about/testimonials">Testimonials</a></li>
-            <li><a href="{{site.url}}/about/rock-climbing-as-a-lifestyle">Rock Climbing as a Lifestyle</a></li>
-            <li><a href="{{site.url}}/about/welcome">Welcome</a></li>
+            <li><a href="{{site.baseurl}}/about/testimonials">Testimonials</a></li>
+            <li><a href="{{site.baseurl}}/about/rock-climbing-as-a-lifestyle">Rock Climbing as a Lifestyle</a></li>
+            <li><a href="{{site.baseurl}}/about/welcome">Welcome</a></li>
           </ul>
         </li>
 
-        <li><a href="{{site.url}}/clinic-information">Appointments</a>
+        <li><a href="{{site.baseurl}}/clinic-information">Appointments</a>
           <ul>
-            <li><a href="{{site.url}}/clinic-information/note-to-new-massage-therapy-clients">Note to New Massage Clients</a></li>
+            <li><a href="{{site.baseurl}}/clinic-information/note-to-new-massage-therapy-clients">Note to New Massage Clients</a></li>
           </ul>
         </li>
 
-        <li><a href="{{site.url}}/contact">Contact</a></li>
+        <li><a href="{{site.baseurl}}/contact">Contact</a></li>
 
-        <li class="last" ><a href="{{site.url}}/knowledge-centre">Knowledge Centre</a>
+        <li class="last" ><a href="{{site.baseurl}}/knowledge-centre">Knowledge Centre</a>
           <ul>
-            <li><a href="{{site.url}}/knowledge-centre/facts-about-registered-massage-therapy-in-ontario">Facts</a></li>
-            <li><a href="{{site.url}}/knowledge-centre/general-massage-therapy">General Massage Therapy</a></li>
-            <li><a href="{{site.url}}/knowledge-centre/stretching">Stretching</a></li>
-            <li><a href="{{site.url}}/knowledge-centre/rock-climbing">Rock Climbing</a></li>
+            <li><a href="{{site.baseurl}}/knowledge-centre/facts-about-registered-massage-therapy-in-ontario">Facts</a></li>
+            <li><a href="{{site.baseurl}}/knowledge-centre/general-massage-therapy">General Massage Therapy</a></li>
+            <li><a href="{{site.baseurl}}/knowledge-centre/stretching">Stretching</a></li>
+            <li><a href="{{site.baseurl}}/knowledge-centre/rock-climbing">Rock Climbing</a></li>
           </ul>
         </li>
       </ul>
