--- a/_includes/leftcol.html
+++ b/_includes/leftcol.html
@@ -1,12 +1,12 @@
 <div id="leftcol">
 
   <!-- videobox -->
-  {%if page.post_id == 75 %}<a href="http://youtube/XSRrvEXZSdk" target="_blank" class="widget_sp_image-image-link" title="Jeremy Bissonnette, Registered Massage Therapist"><img width="350" height="322" alt="Jeremy Bissonnette, Registered Massage Therapist" class="attachment-full aligncenter" style="max-width: 100%;" src="{{site.baseurl}}/assets/images/img_video.gif"></a>{% endif %}
+  {%if page.post_id == 75 %}<a href="http://youtube/XSRrvEXZSdk" target="_blank" title="Jeremy Bissonnette, Registered Massage Therapist"><img width="350" height="322" alt="Jeremy Bissonnette, Registered Massage Therapist" class="attachment-full aligncenter" style="max-width: 100%;" src="{{site.baseurl}}/assets/images/img_video.gif"></a>{% endif %}
   <!-- videobox -->
 
   <!-- Schedule Now Button -->
   <h3 class="widget-title"> </h3>
-  <a href="{{site.baseurl}}/clinic-information" target="_self" class="widget_sp_image-image-link" title="Schedule Massage Therapy Appointment Now"><img width="300" height="67" alt="Schedule Massage Therapy Appointment Now" src="{{site.urll}}/assets/images/kw-schedule-now-button-300x67.jpg"></a>      
+  <a href="{{site.baseurl}}/clinic-information" target="_self" title="Schedule Massage Therapy Appointment Now"><img width="300" height="67" alt="Schedule Massage Therapy Appointment Now" src="{{site.baseurl}}/assets/images/kw-schedule-now-button-300x67.jpg"></a>      
   <!-- Schedule Now Button -->
 
   <!-- timebox -->
