--- a/_includes/rightcol.html
+++ b/_includes/rightcol.html
@@ -2,10 +2,11 @@
   {% if page.layout == "post" %}
     <h1>{{ page.title }}</h1>
   {% endif %}
+  
   {{content}}
 
   <div id="formbox">
-    <form action="{{site.baseurl}}/#wpcf7-f431-p75-o1" method="post" novalidate="novalidate">
+    <form id="contactform" action="//formspree.io/jeremy@kwmassage.com" method="POST">
       <h1>Contact Form</h1>
       <div class="textfield" >
         <span>Your Name (required)</span>
@@ -13,7 +14,7 @@
       </div>
       <div  class="textfield">
         <span>Your Email (required)</span>
-        <input type="email" name="your-email" value="" size="40" class="input" aria-required="true" aria-invalid="false">
+        <input type="email" name="_replyto" value="" size="40" class="input" aria-required="true" aria-invalid="false">
       </div>
       <div  class="textfield">
         <span>Subject</span>
