--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -25,8 +25,8 @@
                     <nav id="primary-menu" class="style-2 noleftmargin noleftpadding">
 
                         <ul class="one-page-menu" >
-                        <li><div id="tagline" class="noleftpadding divcenter" style="background:url(/assets/images/bg_tagline.png) no-repeat; width:402px; height:49px; float:left; font-size:14px; color:#fff; font-weight:bold; line-height:49px; text-shadow:rgba(64, 138, 179, 1) 0px 1px 0px; text-transform:uppercase; margin:38px 0 0 0; padding:0 0 0 173px;">KITCHENER / WATERLOO MASSAGE THERAPY</div></li>
-                            <!-- <li><a href="{{site.baseurl}}/about"><div>About</div></a>
+                            <li><a href="{{site.baseurl}}/"><div>Home</div></a></li>
+                            <li><a href="{{site.baseurl}}/about"><div>About</div></a>
                                 <ul>
                                     <li><a href="{{site.baseurl}}/about/testimonials"><div>Testimonials</div></a></li>
                                     <li><a href="{{site.baseurl}}/about/rock-climbing-as-a-lifestyle"><div>Rock Climbing as a Lifestyle</div></a></li>
@@ -46,7 +46,7 @@
                                     <li><a href="{{site.baseurl}}/knowledge-centre/stretching"><div>Stretching</div></a></li>
                                     <li><a href="{{site.baseurl}}/knowledge-centre/rock-climbing"><div>Rock Climbing</div></a></li>
                                 </ul>
-                            </li> -->
+                            </li>
                         </ul>
                     </nav><!-- #primary-menu end -->
 
@@ -56,32 +56,16 @@
 
         </header><!-- #header end -->
 
-        <section id="slider" style="background: url(assets/images/bg_body_mountain.jpg) center; overflow: visible;" data-height-lg="500" data-height-md="500" data-height-sm="600" data-height-xs="600" data-height-xxs="600">
-            <div class="container clearfix">
-<!-- 
-                  <form action="#" method="post" role="form" class="landing-wide-form landing-form-overlay dark nobottommargin clearfix">
-                    <div class="heading-block nobottommargin nobottomborder">
-                      <h2>Signup for FREE</h2>
-                      <span>Get 30 Days Unlimited Access</span>
+        <section id="slider" class="slider-parallax" style="background: url('assets/images/bg_body_mountain.jpg') no-repeat; background-size: cover" data-height-lg="425" data-height-md="425" data-height-sm="400" data-height-xs="300" data-height-xxs="250">                <div class="swiper-wrapper">
+                    <div class="swiper-slide dark" >
+                        <div class="container clearfix">
+                            <div class="slider-caption slider-caption-center ">
+                                <img src="assets/images/Kitchener_massage_logo.png">
+                               
+                            </div>
+                        </div>
                     </div>
-                    <div class="line" style="margin: 20px 0 30px;"></div>
-                    <div class="col_full">
-                      <input type="text" class="form-control input-lg not-dark" value="" placeholder="Your Name*">
-                    </div>
-                    <div class="col_full">
-                      <input type="email" class="form-control input-lg not-dark" value="" placeholder="Your Email*">
-                    </div>
-                    <div class="col_full">
-                      <input type="password" class="form-control input-lg not-dark" value="" placeholder="Choose Password*">
-                    </div>
-                    <div class="col_full">
-                      <input type="password" class="form-control input-lg not-dark" value="" placeholder="Confirm Password*">
-                    </div>
-                    <div class="col_full nobottommargin">
-                      <button class="btn btn-lg btn-danger btn-block nomargin" value="submit" type="submit" style="">START FREE TRIAL</button>
-                    </div>
-                </form> -->
-
+                </div>
             </div>
         </section>
 
