logo Kitch /Water MT

--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -16,7 +16,7 @@
                     <!-- Logo
                     ============================================= -->
                     <div id="logo" class="norightmargin norightpadding">
-                        <a href="index.html" class="standard-logo" data-dark-logo="assets/images/logo.png"><img src="assets/images/logo.png" alt="Kitchener Massage Therapist"></a>
+                        <a href="index.html" class="standard-logo" data-dark-logo="assets/images/logo_kitchener_massage.png"><img src="assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist"></a>
                     </div>
                     <!-- #logo end -->
 
@@ -56,15 +56,21 @@
 
         </header><!-- #header end -->
 
-        <section id="slider" class="slider-parallax" style="background: url('assets/images/bg_body_mountain.jpg') no-repeat; background-size: cover" data-height-lg="425" data-height-md="425" data-height-sm="400" data-height-xs="300" data-height-xxs="250">                <div class="swiper-wrapper">
-                    <div class="swiper-slide dark" >
-                        <div class="container clearfix">
-                            <div class="slider-caption slider-caption-center ">
-                                <img src="assets/images/Kitchener_massage_logo.png">
-                               
-                            </div>
-                        </div>
+        <section id="slider" class="slider-parallax" style="background: url('assets/images/bg_body_mountain.jpg') no-repeat; background-size: cover" data-height-lg="500" data-height-md="450" data-height-sm="400" data-height-xs="300" data-height-xxs="250">
+            <div class="container clearfix">
+                <div class="vertical-middle dark center">
+                    <div class="nobottommargin center class="hidden-xs hidden-sm"">
+                        <img style="height: 150px;" src="assets/images/Kitchener_massage_logo.png">
                     </div>
+                    <div class="heading-block nobottommargin center">
+                        <h1>
+                            <span class="text-rotater nocolor" data-separator="|" data-rotate="flipInX" data-speed="3500">
+                                KITCHENER / WATERLOO MASSAGE THERAPY
+                            </span>
+                        </h1>
+                        <span class="hidden-xs">Specializing in Deep Tissue Massage Therapy</span>
+                    </div>
+                           
                 </div>
             </div>
         </section>
