--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -5,7 +5,7 @@
 
         <!-- Header
         ============================================= -->
-        <header id="header" class="transparent-header" data-sticky-class="not-dark" data-responsive-class="not-dark">
+        <header id="header" class="transparent-header style-2" data-sticky-class="not-dark" data-responsive-class="not-dark">
 
             <div id="header-wrap">
 
@@ -56,28 +56,44 @@
 
         </header><!-- #header end -->
 
-        <section id="slider" class="slider-parallax" style="background: url('assets/images/bg_body_mountain.jpg') no-repeat; background-size: cover" data-height-lg="500" data-height-md="450" data-height-sm="400" data-height-xs="300" data-height-xxs="250">
-            <div class="container clearfix">
-                <div class="vertical-middle dark center">
-                    <div class="nobottommargin center class="hidden-xs hidden-sm"">
-                        <img style="height: 150px;" src="assets/images/Kitchener_massage_logo.png">
-                    </div>
-                    <div class="heading-block nobottommargin center">
-                        <h1>
-                            <span class="text-rotater nocolor" data-separator="|" data-rotate="flipInX" data-speed="3500">
-                                KITCHENER / WATERLOO MASSAGE THERAPY
-                            </span>
-                        </h1>
-                        <span class="hidden-xs">Specializing in Deep Tissue Massage Therapy</span>
-                    </div>
-                           
-                </div>
+        <section id="slider" class="slider-parallax" style="background: url('assets/images/bg_body_mountain.jpg'); backgroung-repeat: no-repeat; background-size: cover" data-height-lg="600" data-height-md="500" data-height-sm="400" data-height-xs="300" data-height-xxs="250">
+          <div class="container clearfix">
+            <div class="vertical-middle dark center">
+              <div class="nobottommargin center text-rotate" data-rotate="flipInX" class="hidden-xs hidden-sm hidden-xxs">
+                <img style="height: 100px;" src="assets/images/Kitchener_massage_logo.png">
+              </div>
+              <h1>
+                <span class="text-rotater nocolor" data-separator="|" data-rotate="flipInX" data-speed="3500">
+                  <span class="t-rotate"> Deep Tissue Massage Therapy| Repetitive Strain Injuries| Back Pain| Sports Injuries| Headaches</span>
+                </span>
+              </h1>     
             </div>
-        </section>
+          </div>
 
+        </section>
+        <section class="tabs clearfix">
+        <div class="tabs bottom nobottommargin nobocolor" id="tabs">
+
+          <ul class="tab-nav clearfix nobgcolor">
+            <li><a href="#tab-1">Hours</a></li>
+            <li><a href="#tab-2">Rates</a></li>
+          </ul>
+
+          <div class="tab-container">
+
+            <div class="tab-content clearfix" id="tab-1">
+              These are the days I work
+            </div>
+            <div class="tab-content clearfix" id="tab-2">
+              tHIS IS HOW MUCH i CHARGE
+            </div>
+          </div>
+        </div>
+        </section>
         <!-- Content
         ============================================= -->
         <section id="content" style="overflow: visible;">
+
 
          <!--  <div class="content-wrap">
 
