--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -68,10 +68,11 @@
                 </span>
               </h1>     
             </div>
+            
           </div>
 
         </section>
-        <section class="tabs clearfix">
+<!--         <section class="tabs clearfix">
         <div class="tabs bottom nobottommargin nobocolor" id="tabs">
 
           <ul class="tab-nav clearfix nobgcolor">
@@ -89,20 +90,20 @@
             </div>
           </div>
         </div>
-        </section>
+        </section> -->
         <!-- Content
         ============================================= -->
         <section id="content" style="overflow: visible;">
 
 
-         <!--  <div class="content-wrap">
+          <div class="content-wrap">
 
-            <div class="promo promo-dark promo-full landing-promo header-stick">
+            <div class="promo  promo-full landing-promo header-stick">
               <div class="container clearfix">
-                <h3>Beautiful Landing Page designs waiting for you inside <i class="icon-circle-arrow-right" style="position:relative;top:2px;"></i></h3>
+                <h3>KITCHENER / WATERLOO MASSAGE THERAPY <i class="icon-circle-arrow-right" style="position:relative;top:2px;"></i></h3>
                 <span>You'll love our beautiful &amp; interactive builder that makes your build process easier &amp; fun.</span>
               </div>
-          </div> -->
+          </div>
 
           <div class="container clearfix">
 
